--- a/docs/frameworkCore/templates/_app---templates---main.php.html
+++ b/docs/frameworkCore/templates/_app---templates---main.php.html
@@ -38,7 +38,7 @@
 														</div>
 		<div class="info-box-body">	
 			<a name="_$template"><!-- --></a>
-<div class="evenrow">
+<div class="oddrow">
 	
 	<div>
 		<img src="../../media/images/Page.png" alt=" " />
@@ -59,7 +59,7 @@
 	
 	
 	<p class="notes" id="credit">
-		Documentation generated on Mon, 02 Jan 2012 16:08:37 +0100 by <a href="http://www.phpdoc.org" target="_blank">phpDocumentor 1.4.3</a>
+		Documentation generated on Tue, 03 Jan 2012 11:27:55 +0100 by <a href="http://www.phpdoc.org" target="_blank">phpDocumentor 1.4.3</a>
 	</p>
 	</div></body>
 </html>
