--- a/docs/frameworkCore/templates/_templates---menu.php.html
+++ b/docs/frameworkCore/templates/_templates---menu.php.html
@@ -3,13 +3,13 @@
   <html xmlns="http://www.w3.org/1999/xhtml">
 		<head>
 			<!-- template designed by Marco Von Ballmoos -->
-			<title>Docs for page error_500.php</title>
+			<title>Docs for page menu.php</title>
 			<link rel="stylesheet" href="../../media/stylesheet.css" />
 			<meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1'/>
 		</head>
 		<body>
 			<div class="page-body">			
-<h2 class="file-name"><img src="../../media/images/Page_logo.png" alt="File" style="vertical-align: middle">/app/templates/error_500.php</h2>
+<h2 class="file-name"><img src="../../media/images/Page_logo.png" alt="File" style="vertical-align: middle">/templates/menu.php</h2>
 
 <a name="sec-description"></a>
 <div class="info-box">
@@ -18,7 +18,7 @@
 													</div>
 	<div class="info-box-body">	
 		<!-- ========== Info from phpDoc block ========= -->
-<p class="short-description">Custom 500 error page.</p>
+<p class="short-description">Example template for the menu.</p>
 	<ul class="tags">
 				<li><span class="field">author:</span> Paulina Budzon &lt;<a href="mailto:paulina.budzon@gmail.com">paulina.budzon@gmail.com</a>&gt;</li>
 			</ul>
@@ -32,7 +32,7 @@
 	
 	
 	<p class="notes" id="credit">
-		Documentation generated on Thu, 05 Jan 2012 09:39:04 +0100 by <a href="http://www.phpdoc.org" target="_blank">phpDocumentor 1.4.3</a>
+		Documentation generated on Wed, 06 Jun 2012 14:21:24 +0200 by <a href="http://www.phpdoc.org" target="_blank">phpDocumentor 1.4.3</a>
 	</p>
 	</div></body>
 </html>
